--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,80 +1,126 @@
 ---
-title: "Quickstart"
-description: "Start building awesome documentation in minutes"
+title: 'Quickstart'
+description: 'Start building foundation models in minutes'
 ---
 
-## Get started in three steps
+## Quick Start Guide
 
-Get your documentation site running locally and make your first customization.
+Get your first foundation model training in under an hour with these simple steps.
 
-### Step 1: Set up your local environment
+<Steps>
+  <Step title="Prepare Your Data">
+    Nolano.AI handles all data preprocessing with a single command. Here's a minimal config example for text data:
 
-<AccordionGroup>
-  <Accordion icon="copy" title="Clone your docs locally">
-    During the onboarding process, you created a GitHub repository with your docs content if you didn't already have one. You can find a link to this repository in your [dashboard](https://dashboard.mintlify.com).
+    ```python data_config.py
+    from pynolano import DataPreparationConfig
+
+    def build() -> DataPreparationConfig:
+        return DataPreparationConfig(
+            input_path = "./raw_data", # Can also be a callable function
+            output_path = "./prepared_data",
+            tokenization = "Qwen/Qwen3-4B",
+        )
+    ```
+
+    Run data preparation:
+
+    ```bash
+    nolano prepare_data data_config.py
+    ```
+  </Step>
+
+  <Step title="Train Your Model">
+    Create a simple training configuration:
+
+    ```python train_config.py
+    from pynolano import DataConfig, OptimizationConfig, ExperimentConfig, ModelConfig
+
+    def build() -> ExperimentConfig:
+        return ExperimentConfig(
+            data_configs=DataConfig(data_paths="./prepared_data"),
+            model_config=ModelConfig("Qwen/Qwen3-4B"),
+            optimization_config=OptimizationConfig(
+                global_batch_size=32, 
+                max_learning_rate=3e-4, 
+                total_training_steps=1000
+            )
+        )
+    ```
+
+    Start training:
     
-    To clone the repository locally so that you can make and preview changes to your docs, follow the [Cloning a repository](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository) guide in the GitHub docs.
-  </Accordion>
-  <Accordion icon="rectangle-terminal" title="Start the preview server">
-    1. Install the Mintlify CLI: `npm i -g mint`
-    2. Navigate to your docs directory and run: `mint dev`
-    3. Open `http://localhost:3000` to see your docs live!
-    
-    <Tip>Your preview updates automatically as you edit files.</Tip>
-  </Accordion>
-</AccordionGroup>
+    ```bash
+    nolano train train_config.py
+    ```
+  </Step>
 
-### Step 2: Deploy your changes
+  <Step title="Automatic Features">
+    That's it! Your model is now training with automatic:
 
-<AccordionGroup>
-  <Accordion icon="github" title="Install our GitHub app">
-    Install the Mintlify GitHub app from your [dashboard](https://dashboard.mintlify.com/settings/organization/github-app).
-    
-    Our GitHub app automatically deploys your changes to your docs site, so you don't need to manage deployments yourself.
-</Accordion>
-<Accordion icon="palette" title="Update your site name and colors">
-    For a first change, let's update the name and colors of your docs site.
+    <CardGroup cols={2}>
+      <Card title="Distributed Training" icon="server" color="#935095">
+        Data parallelism across available GPUs
+      </Card>
+      <Card title="Mixed Precision" icon="gauge" color="#B47BB6">
+        Optimal performance with mixed precision training
+      </Card>
+      <Card title="Checkpointing" icon="floppy-disk" color="#6F3A71">
+        Checkpoint saving every epoch
+      </Card>
+      <Card title="Metrics Logging" icon="chart-line" color="#935095">
+        Real-time metrics logging
+      </Card>
+    </CardGroup>
+  </Step>
 
-    1. Open `docs.json` in your editor.
-    2. Change the `"name"` field to your project name.
-    3. Update the `"colors"` to match your brand.
-    4. Save and see your changes instantly at `http://localhost:3000`.
+  <Step title="Next Steps">
+    After model training you can:
 
-    <Tip>Try changing the primary color to see an immediate difference!</Tip>
-  </Accordion>
-</AccordionGroup>
+    <CodeGroup>
+      ```bash Export to Hugging Face
+      nolano convert_to_hf ./checkpoints/global_step_1000 config.yaml ./hf_model
+      ```
 
-### Step 3: Go live
+      ```bash Run Evaluation
+      nolano evaluate eval_config.py
+      ```
 
-<Accordion icon="rocket" title="Publish your docs">
-  1. Commit and push your changes.
-  2. Your docs will update and be live in moments!
-</Accordion>
+      ```bash Run Inference
+      nolano infer model_path input_data
+      ```
+    </CodeGroup>
+  </Step>
+</Steps>
 
-## Next steps
+## What's Next?
 
-Now that you have your docs running, explore these key features:
-
-<CardGroup cols={2}>
-
-<Card title="Write Content" icon="pen-to-square" href="/essentials/markdown">
-  Learn MDX syntax and start writing your documentation.
-</Card>
-
-<Card title="Customize style" icon="palette" href="/essentials/settings">
-  Make your docs match your brand perfectly.
-</Card>
-
-<Card title="Add code examples" icon="square-code" href="/essentials/code">
-  Include syntax-highlighted code blocks.
-</Card>
-
-<Card title="API documentation" icon="code" href="/api-reference/introduction">
-  Auto-generate API docs from OpenAPI specs.
-</Card>
-
+<CardGroup cols={3}>
+  <Card
+    title="Data Preparation"
+    icon="database"
+    href="/data-preparation"
+    color="#935095"
+  >
+    Learn about advanced data preprocessing techniques and tokenization strategies
+  </Card>
+  <Card
+    title="Model Configuration"
+    icon="brain"
+    href="/model-configuration"
+    color="#B47BB6"
+  >
+    Explore different model architectures and initialization settings
+  </Card>
+  <Card
+    title="Evaluation"
+    icon="chart-bar"
+    href="/evaluation"
+    color="#6F3A71"
+  >
+    Understand how to evaluate your trained models and run inference
+  </Card>
 </CardGroup>
 
-<Note>
-  **Need help?** See our [full documentation](https://mintlify.com/docs) or join our [community](https://mintlify.com/community).
-</Note>
+<Tip>
+  Need help?  reach out to [support](mailto:hello@nolano.ai).
+</Tip>
