adding more details

--- a/data-formats.mdx
+++ b/data-formats.mdx
@@ -47,6 +47,18 @@ Time series data follows the **AutoGluonTS** format, where each line contains a 
 {"target": [23.5, 24.1, 23.8, 24.7, 25.2, 24.9, 25.5], "start": "2023-06-15", "freq": "D"}
 ```
 
+### Multivariate Time Series
+
+<Info>
+  **Coming Soon**: Multivariate time series support will be available in an upcoming release, enabling training on multiple correlated time series simultaneously.
+</Info>
+
+### Irregular Sample Intervals
+
+<Info>
+  **Coming Soon**: Support for irregular sample intervals will be added to handle time series data with non-uniform timestamps and varying frequencies.
+</Info>
+
 ### Required Fields
 
 <ParamField path="target" type="array" required>
