--- a/model-configuration.mdx
+++ b/model-configuration.mdx
@@ -88,6 +88,12 @@ config = ModelConfig(
     - **Chronos**: Amazon Chronos models
     - **TimesFM**: Google TimesFM
   </Tab>
+  
+  <Tab title="Low Precision Models">
+    - **TriLM**: Ternary Language Models with 1.58-bit quantization
+    - **BiLM**: Binary Language Models with 1-bit quantization
+    - **Arbitrary-precision**: Language Models with Arbitrary Precision
+  </Tab>
 </Tabs>
 
 you can request custom architecture if needed
