addin more files

--- a/model-configuration.mdx
+++ b/model-configuration.mdx
@@ -83,7 +83,7 @@ config = ModelConfig(
     - **Mixtral** 
   </Tab>
   
-  <Tab title="Time Series">
+  <Tab title="Time Series Foundation Models">
     - **TSFM**: Time Series Foundation Models
     - **Chronos**: Amazon Chronos models
     - **TimesFM**: Google TimesFM
