Beautifing nav bar

--- a/api-reference/model-config.mdx
+++ b/api-reference/model-config.mdx
@@ -24,3 +24,16 @@ description: "API reference for model configuration"
 <ParamField path="load_optimizer" type="bool | None" default="None">
   Whether to load optimizer state from checkpoint. Set to `True` for continual training from checkpoint.
 </ParamField>
+
+<ParamField path="precision" type="str" default="fp16">
+  Model precision configuration:
+  - `"binary"`: Binary precision (1-bit)
+  - `"ternary"`: Ternary precision (1.58-bit)
+  - `"int2"`: 2-bit integer precision
+  - `"fp8"`: 8-bit floating point
+  - `"mxfp4"`: 4-bit microscaling floating point
+  - `"mxfp6"`: 6-bit microscaling floating point
+  - `"ue8m0"`: 8-bit unsigned integer with 0 exponent bits
+  - `"fp16"`: 16-bit floating point (default)
+  - `"fp32"`: 32-bit floating point
+</ParamField>
